# VitaTweakBox

./: CMakeLists.txt  README.md
pkg/sce_sys/livearea/contents/: template.xml
release/: param.sfo  template.xml
resources/: changeinfo.xml  changeinfo_02.xml  changeinfo_en.txt  changeinfo_fr.txt  english_us.txt  french.txt  theme.txt
resources/default/forecast/: background.png.old  background2.png.old
resources/default/help/vtb/: colors.ini
resources/default/vitashell/: colors.ini
resources/default/vtb/: param.ini
src/: archive.c  audioplayer.c  audioplayer.h  browser.c  browser.h  coredump.c  credits.c  credits.h  database.c  database.h  dshell.c  dshell.h  elf.c  file.h  help.c  help.h  hex.c  init.c  io_process.c  language.c  language.h  loadimages.c  loadimages.h  main.c  main.h  main_context.c  main_vtb.c  main_vtb.h  message_dialog.c  network_update.c  package_installer.c  package_installer.h  pbp.c  pbp.h  pfs.h  photo.c  refresh.c  settings.c  settings.h  text.c  (+8 more)
src/book/: book.c  book.h  book_images.c  book_images.h  images_menu.c  images_menu.h
src/modules/kernel/: main.c
src/modules/user/: CMakeLists.txt
src/vitabackup/: fs.c  fs.h  log.c  log.h  progress_bar.c  progress_bar.h  vitabackup.c  vitabackup.h  vitabackup_utils.c  vitabackup_utils.h
src/vitabackup/menus/: menu_backup.c  menu_backup.h  menu_delete.c  menu_delete.h  menu_main.c  menu_main.h  menu_options.c  menu_options.h  menu_restore.c  menu_restore.h
src/vitabackup/microtar/: microtar.c  microtar.h  microtar_read.c  microtar_read.h  microtar_write.c  microtar_write.h
src/vitadatabase/: database_file.c  database_file.h  database_utils.c  database_utils.h
src/vitaforecast/: clock.c  clock.h  forecast.c  forecast.h  net.c  net.h  weather.c  weather.h
src/vitaident/: app.c  app.h  kernel.c  kernel.h  net.c  net.h  power.c  power.h  regmgr.c  regmgr.h  vitaident.c  vitaident.h  vitaident_utils.c  vitaident_utils.h
updater/: Makefile  main.c
